keystone: Build python package with PEP-517

--- a/mingw-w64-keystone/PKGBUILD
+++ b/mingw-w64-keystone/PKGBUILD
@@ -5,21 +5,24 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=0.9.2
-pkgrel=5
+pkgrel=6
 pkgdesc="Lightweight multi-platform, multi-architecture assembler framework (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
-             "${MINGW_PACKAGE_PREFIX}-ninja"
-             "${MINGW_PACKAGE_PREFIX}-cc"
-             "${MINGW_PACKAGE_PREFIX}-python"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
-license=('spdx:GPL-2.0-only' 'custom')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.keystone-engine.org/"
+msys2_repository_url="https://github.com/keystone-engine/keystone"
 msys2_references=(
   'pypi: keystone-engine'
 )
-source=("${_realname}-${pkgver}.tar.gz"::"https://github.com/keystone-engine/keystone/archive/${pkgver}.tar.gz"
+license=('spdx:GPL-2.0-only' 'custom')
+makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
+             "${MINGW_PACKAGE_PREFIX}-cmake"
+             "${MINGW_PACKAGE_PREFIX}-ninja"
+             "${MINGW_PACKAGE_PREFIX}-python"
+             "${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+source=("https://github.com/keystone-engine/keystone/archive/${pkgver}/${_realname}-${pkgver}.tar.gz"
         "0001-cmake-install-dir.patch"
         "0002-kstool-win-msys2.patch"
         "0003-python-load-dll-from-prefix.patch")
@@ -50,8 +53,9 @@ build() {
 
   cmake --build .
 
-  cd "${srcdir}/${_realname}-${pkgver}/bindings/python"
-  "${MINGW_PREFIX}"/bin/python setup.py build
+  cp -r "${srcdir}/${_realname}-${pkgver}/bindings/python" "${srcdir}/python-build-${MSYSTEM}"
+  cd "${srcdir}/python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package_keystone() {
@@ -59,11 +63,10 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 
   cd "${srcdir}/build-${MSYSTEM}"
   DESTDIR="${pkgdir}" cmake --install .
-  install -Dm0644 \
-    "${srcdir}/${_realname}-${pkgver}/COPYING" \
+
+  install -Dm0644 "${srcdir}/${_realname}-${pkgver}/COPYING" \
     "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
-  install -Dm0644 \
-    "${srcdir}/${_realname}-${pkgver}/EXCEPTIONS-CLIENT" \
+  install -Dm0644 "${srcdir}/${_realname}-${pkgver}/EXCEPTIONS-CLIENT" \
     "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/EXCEPTIONS-CLIENT"
 }
 
@@ -72,10 +75,10 @@ license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-keystone"
          "${MINGW_PACKAGE_PREFIX}-python")
 
-  cd "${srcdir}/${_realname}-${pkgver}/bindings/python"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-    "${MINGW_PREFIX}"/bin/python setup.py install --prefix="${MINGW_PREFIX}" \
-      --root="${pkgdir}" --optimize=1 --skip-build
+  cd "python-build-${MSYSTEM}"
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm755 sample.py -t "${pkgdir}${MINGW_PREFIX}/share/doc/python-${_realname}"
   install -Dm644 LICENSE.TXT -t "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}"
