--- a/mingw-w64-python-referencing/PKGBUILD
+++ b/mingw-w64-python-referencing/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=referencing
 pkgbase=mingw-w64-python-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-${_realname}
-pkgver=0.35.1
-pkgrel=2
+pkgver=0.36.1
+pkgrel=1
 pkgdesc='An implementation-agnostic implementation of JSON reference resolution (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -17,6 +17,7 @@ msys2_references=(
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-attrs"
+         "${MINGW_PACKAGE_PREFIX}-python-typing_extensions" # < py 3.13
          "${MINGW_PACKAGE_PREFIX}-python-rpds-py")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
@@ -24,7 +25,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-hatch-vcs")
 source=(https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz)
 noextract=(${_realname}-${pkgver}.tar.gz)
-sha256sums=('25b42124a6c8b632a425174f24087783efb348a6f1e0008e63cd4466fedf703c')
+sha256sums=('ca2e6492769e3602957e9b831b94211599d2aade9477f5d44110d2530cf9aade')
 
 prepare() {
   rm -rf python-build-${MSYSTEM} | true
