python-sounddevice: update to 0.5.1

--- a/mingw-w64-python-sounddevice/PKGBUILD
+++ b/mingw-w64-python-sounddevice/PKGBUILD
@@ -3,15 +3,16 @@
 _realname=sounddevice
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.4.6
-pkgrel=3
+pkgver=0.5.1
+pkgrel=1
 pkgdesc='Play and Record Sound with Python (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="https://python-sounddevice.rtfd.io/"
 msys2_references=(
   'pypi: sounddevice'
 )
+msys2_repository_url='https://github.com/spatialaudio/python-sounddevice/'
+url='https://python-sounddevice.readthedocs.io/'
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-cffi"
@@ -19,7 +20,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
 optdepends=("${MINGW_PACKAGE_PREFIX}-python-numpy: to play back and record NumPy arrays")
 source=("https://pypi.org/packages/source/${_realname:0:1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('3236b78f15f0415bdf006a620cef073d0c0522851d66f4a961ed6d8eb1482fe9')
+sha256sums=('09ca991daeda8ce4be9ac91e15a9a81c8f81efa6b695a348c9171ea0c16cb041')
 
 prepare() {
   rm -rf python-build-${MSYSTEM} | true
