--- a/mingw-w64-sdl3/PKGBUILD
+++ b/mingw-w64-sdl3/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=3.2.0
 pkgrel=1
 pkgdesc="A library for portable low-level access to a video framebuffer, audio output, mouse, and keyboard (Version 3) (mingw-w64)"
 arch=('any')
-mingw_arch=('ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'aur: sdl3'
   "cpe: cpe:/a:libsdl:libsdl"
