llvm-16: Fix pkgbase

--- a/mingw-w64-llvm-16/PKGBUILD
+++ b/mingw-w64-llvm-16/PKGBUILD
@@ -12,7 +12,7 @@ if [[ $MINGW_PACKAGE_PREFIX == *-clang-* ]]; then
 fi
 
 _realname=llvm
-pkgbase=mingw-w64-${_realname}
+pkgbase=mingw-w64-${_realname}-16
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-16"
          "${MINGW_PACKAGE_PREFIX}-clang-16"
          "${MINGW_PACKAGE_PREFIX}-compiler-rt-16")
@@ -20,7 +20,7 @@ _version=16.0.6
 _rc=""
 _tag=llvmorg-${_version}${_rc}
 pkgver=${_version}${_rc/-/}
-pkgrel=1
+pkgrel=2
 pkgdesc="C language family frontend for LLVM 16 (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
