--- a/mingw-w64-gw/PKGBUILD
+++ b/mingw-w64-gw/PKGBUILD
@@ -12,6 +12,7 @@ url="https://github.com/kcleal/gw"
 license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
              "${MINGW_PACKAGE_PREFIX}-skia"
+             "${MINGW_PACKAGE_PREFIX}-pkgconf"
 )
 depends=("${MINGW_PACKAGE_PREFIX}-htslib"
          "${MINGW_PACKAGE_PREFIX}-glfw"
