--- a/mingw-w64-python-sounddevice/PKGBUILD
+++ b/mingw-w64-python-sounddevice/PKGBUILD
@@ -26,6 +26,8 @@ sha256sums=('09ca991daeda8ce4be9ac91e15a9a81c8f81efa6b695a348c9171ea0c16cb041')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+
+  export PYTHON_SOUNDDEVICE_PLATFORM=$(python -c "import sysconfig, sys; sys.stdout.write(sysconfig.get_platform())")
   python -m build --wheel --skip-dependency-check --no-isolation
 }
 
