python-sounddevice: Fix portaudio DLL name

--- a/mingw-w64-python-sounddevice/PKGBUILD
+++ b/mingw-w64-python-sounddevice/PKGBUILD
@@ -21,8 +21,15 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 optdepends=("${MINGW_PACKAGE_PREFIX}-python-numpy: to play back and record NumPy arrays")
-source=("https://pypi.org/packages/source/${_realname:0:1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('09ca991daeda8ce4be9ac91e15a9a81c8f81efa6b695a348c9171ea0c16cb041')
+source=("https://pypi.org/packages/source/${_realname:0:1}/${_realname}/${_realname}-${pkgver}.tar.gz"
+        0001-fix-portaudio-dll.patch)
+sha256sums=('09ca991daeda8ce4be9ac91e15a9a81c8f81efa6b695a348c9171ea0c16cb041'
+            '4d691b7342997dd9384baceba33b94db0a31b881b4ea3bc8c804246dd90df5b4')
+
+prepare() {
+  cd "${_realname}-${pkgver}"
+  patch -p1 -i "${srcdir}"/0001-fix-portaudio-dll.patch
+}
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
