7zip: statically link 7zCon.sfx
It should be standalone.

Fixes #23182

--- a/mingw-w64-7zip/PKGBUILD
+++ b/mingw-w64-7zip/PKGBUILD
@@ -4,7 +4,7 @@ _realname=7zip
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=24.09
-pkgrel=2
+pkgrel=3
 pkgdesc="A file archiver with a high compression ratio (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -42,7 +42,9 @@ build() {
 
   make -C CPP/7zip/Bundles/Format7zF -f makefile.gcc
   make -C CPP/7zip/UI/Console -f makefile.gcc
-  make -C CPP/7zip/Bundles/SFXCon -f makefile.gcc
+  # undo 001-disable-static.patch for SFXCon in particular, it should be
+  # standalone
+  make -C CPP/7zip/Bundles/SFXCon -f makefile.gcc LDFLAGS_STATIC_2=-static
 }
 
 package() {
