python-hpack: update to 4.1.0

--- a/mingw-w64-python-hpack/PKGBUILD
+++ b/mingw-w64-python-hpack/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=hpack
 pkgbase=mingw-w64-python-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-${_realname}
-pkgver=4.0.0
-pkgrel=5
+pkgver=4.1.0
+pkgrel=1
 pkgdesc='HTTP/2 Header Encoding for Python (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url='https://github.com/python-hyper/hpack'
+url='https://python-hyper.org/'
+msys2_repository_url='https://github.com/python-hyper/hpack'
 msys2_references=(
   "cpe: cpe:/a:python:hpack"
   "pypi: hpack"
@@ -19,7 +20,7 @@ makedepends=(${MINGW_PACKAGE_PREFIX}-python-build
              ${MINGW_PACKAGE_PREFIX}-python-installer
              ${MINGW_PACKAGE_PREFIX}-python-setuptools)
 source=(https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz)
-sha256sums=('fc41de0c63e687ebffde81187a948221294896f6bdc0ae2312708df339430095')
+sha256sums=('ec5eca154f7056aa06f196a557655c5b009b382873ac8d1e66e79e87535f1dca')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
