python-hyperframe: update to 6.1.0

--- a/mingw-w64-python-hyperframe/PKGBUILD
+++ b/mingw-w64-python-hyperframe/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=hyperframe
 pkgbase=mingw-w64-python-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-${_realname}
-pkgver=6.0.1
-pkgrel=5
+pkgver=6.1.0
+pkgrel=1
 pkgdesc='Pure-Python HTTP/2 framing (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url='https://github.com/python-hyper/hyperframe'
+url='https://python-hyper.org/'
+msys2_repository_url='https://github.com/python-hyper/hyperframe'
 msys2_references=(
   'pypi: hyperframe'
 )
@@ -18,7 +19,7 @@ makedepends=(${MINGW_PACKAGE_PREFIX}-python-build
              ${MINGW_PACKAGE_PREFIX}-python-installer
              ${MINGW_PACKAGE_PREFIX}-python-setuptools)
 source=(https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz)
-sha256sums=('ae510046231dc8e9ecb1a6586f63d2347bf4c8905914aa84ba585ae85f28a914')
+sha256sums=('f630908a00854a7adeabd6382b43923a4c4cd4b821fcb527e6ab9e15382a3b08')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
