python-xlsxwriter: update to 3.2.1

--- a/mingw-w64-python-xlsxwriter/PKGBUILD
+++ b/mingw-w64-python-xlsxwriter/PKGBUILD
@@ -4,35 +4,28 @@ _pyname=XlsxWriter
 _realname=xlsxwriter
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=3.2.0
-pkgrel=3
+pkgver=3.2.1
+pkgrel=1
 pkgdesc="A Python module for creating Excel XLSL files (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="https://github.com/jmcnamara/XlsxWriter"
 msys2_references=(
   'archlinux: python-xlsxwriter'
   'pypi: XlsxWriter'
 )
+msys2_repository_url='https://github.com/jmcnamara/XlsxWriter'
+url='https://xlsxwriter.readthedocs.io/'
 license=('spdx:BSD-2-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}=${pkgver}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('9977d0c661a72866a61f9f7a809e25ebbb0fb7036baa3b9fe74afcfca6b3cb8c')
-
-prepare() {
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+sha256sums=('97618759cb264fb6a93397f660cca156ffa9561743b1823dafb60dc4474e1902')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
