--- a/mingw-w64-xz/PKGBUILD
+++ b/mingw-w64-xz/PKGBUILD
@@ -4,8 +4,8 @@
 _realname=xz
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=5.6.3
-pkgrel=3
+pkgver=5.6.4
+pkgrel=1
 pkgdesc="Library and command line tools for XZ and LZMA compressed files (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -25,7 +25,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-doxygen")
              "po4a")
 source=("https://github.com/tukaani-project/xz/releases/download/v${pkgver}/xz-${pkgver}.tar.xz"{,.sig})
-sha256sums=('db0590629b6f0fa36e74aea5f9731dc6f8df068ce7b7bafa45301832a5eebc3a'
+sha256sums=('829ccfe79d769748f7557e7a4429a64d06858e27e1e362e25d01ab7b931d9c95'
             'SKIP')
 validpgpkeys=('3690C240CE51B4670D30AD1C38EE757D69184620') # Lasse Collin <lasse.collin@tukaani.org>
 
@@ -46,11 +46,17 @@ build() {
     _extra_config+=("--enable-doxygen")
   fi
 
+  # see https://github.com/tukaani-project/xz/releases/tag/v5.6.4
+  # pass --disable-nls for msvcrt builds
+  if [[ ${MSYSTEM} == MINGW32 || ${MSYSTEM} == MINGW64 ]]; then
+    _extra_config+=("--disable-nls")
+  fi
+
   ../${_realname}-${pkgver}/configure \
     --prefix=${MINGW_PREFIX} \
     --disable-rpath \
     --disable-lzma-links \
-    "${_extra_config}"
+    "${_extra_config[@]}"
 
   make
 }
