capstone: update to 5.0.5

--- a/mingw-w64-capstone/PKGBUILD
+++ b/mingw-w64-capstone/PKGBUILD
@@ -4,12 +4,13 @@ _realname=capstone
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-capstone"
          "${MINGW_PACKAGE_PREFIX}-python-capstone")
-pkgver=5.0.3
-pkgrel=2
+pkgver=5.0.5
+pkgrel=1
 pkgdesc='Lightweight multi-platform, multi-architecture disassembly framework (mingw-w64)'
-url='https://www.capstone-engine.org/index.html'
+url='https://www.capstone-engine.org/'
+msys2_repository_url='https://github.com/capstone-engine/capstone'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
@@ -18,10 +19,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+options=('!strip')
 source=("${_realname}-${pkgver}.tar.gz::https://github.com/capstone-engine/capstone/archive/refs/tags/${pkgver}.tar.gz"
         "mingw_python.patch")
-sha256sums=('3970c63ca1f8755f2c8e69b41432b710ff634f1b45ee4e5351defec4ec8e1753'
-            '6ce3627366434510b0154dd8c5a5e271071d24446be576c0bc1d71d7470672f3')
+sha256sums=('3bfd3e7085fbf0fab75fb1454067bf734bb0bebe9b670af7ce775192209348e9'
+            '7021aa9ac55a55b174e9f36d11657e110fcde0c3f57536f1c24d91dcdb34ef0a')
 
 prepare() {
   cd ${_realname}-${pkgver}
@@ -71,9 +73,6 @@ package_capstone() {
 package_python-capstone() {
   depends=("${MINGW_PACKAGE_PREFIX}-capstone"
            "${MINGW_PACKAGE_PREFIX}-python")
-  provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-  conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-  replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 
   cd "${_realname}-${pkgver}/bindings/python"
 
