python-deprecated: update to 1.2.17

--- a/mingw-w64-python-deprecated/PKGBUILD
+++ b/mingw-w64-python-deprecated/PKGBUILD
@@ -3,12 +3,12 @@
 _realname=deprecated
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.2.15
-pkgrel=2
+pkgver=1.2.17
+pkgrel=1
 pkgdesc="Python @deprecated decorator to deprecate old python classes, functions or methods (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="https://github.com/tantale/deprecated/"
+url='https://github.com/laurent-laporte-pro/deprecated'
 msys2_references=(
   'pypi: Deprecated'
 )
@@ -20,7 +20,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('683e561a90de76239796e6b6feac66b99030d2dd3fcf61ef996330f14bbb9b0d')
+sha256sums=('0114a10f0bbb750b90b2c2296c90cf7e9eaeb0abb5cf06c80de2c60138de0a82')
 
 
 build() {
@@ -39,7 +39,4 @@ package() {
   MSYS2_ARG_CONV_EXCL="--prefix=" \
     ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
-  
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE.rst" \
-    "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE.rst"
 }
