--- a/mingw-w64-python-eventlet/PKGBUILD
+++ b/mingw-w64-python-eventlet/PKGBUILD
@@ -3,10 +3,7 @@
 _realname=eventlet
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=0.38.2
+pkgver=0.39.0
 pkgrel=1
 pkgdesc="Highly concurrent networking library (mingw-w64)"
 arch=('any')
@@ -36,20 +33,16 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-python-psycopg2"
               "${MINGW_PACKAGE_PREFIX}-python-mock"
               "${MINGW_PACKAGE_PREFIX}-python-pyzmq")
 source=(https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz)
-sha256sums=('6a46823af1dca7d29cf04c0d680365805435473c3acbffc176765c7f8787edac')
+sha256sums=('01ba0aa6ee2452690fc02b274a2409598a13b997c7b5af9dc66600fa42015a79')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
   sed -r 's|(check_idle_cpu_usage\(.*,) .*\)|\1 0.8\)|g' \
       -i tests/*_test.py
-
-  cd "${srcdir}"
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
 }
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
