python-jupyter-nbclassic: update to 1.2.0

--- a/mingw-w64-python-jupyter-nbclassic/PKGBUILD
+++ b/mingw-w64-python-jupyter-nbclassic/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=nbclassic
 pkgbase=mingw-w64-python-jupyter-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-jupyter-${_realname}
-pkgver=1.1.0
-pkgrel=3
+pkgver=1.2.0
+pkgrel=1
 pkgdesc='Jupyter Notebook as a Jupyter Server extension (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -38,9 +38,9 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-jupyter-packaging"
              "${MINGW_PACKAGE_PREFIX}-python-babel")
-options=(!strip)
+options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('77b77ba85f9e988f9bad85df345b514e9e64c7f0e822992ab1df4a78ac64fc1e')
+sha256sums=('736ec50483a54485971db213be9207e34e51fc144c78343625b69917423644ba')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
