python-prettytable: update to 3.13.0

--- a/mingw-w64-python-prettytable/PKGBUILD
+++ b/mingw-w64-python-prettytable/PKGBUILD
@@ -1,10 +1,9 @@
 # Maintainer: Andrew Sun <adsun701@gmail.com>
 
-_pyname=PrettyTable
 _realname=prettytable
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=3.12.0
+pkgver=3.13.0
 pkgrel=1
 pkgdesc="A simple Python library for easily displaying tabular data (mingw-w64)"
 arch=('any')
@@ -12,7 +11,7 @@ mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: prettytable'
 )
-url="https://github.com/jazzband/prettytable"
+url='https://github.com/prettytable/prettytable'
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python-wcwidth")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
@@ -22,7 +21,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest"
               "${MINGW_PACKAGE_PREFIX}-python-pytest-cov")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('f04b3e1ba35747ac86e96ec33e3bb9748ce08e254dc2a1c6253945901beec804')
+sha256sums=('30e1a097a7acb075b5c488ffe01195349b37009c2d43ca7fa8b5f6a61daace5b')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
