python-qcengine: update to 0.31.0

--- a/mingw-w64-python-qcengine/PKGBUILD
+++ b/mingw-w64-python-qcengine/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=qcengine
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.30.0
-pkgrel=3
+pkgver=0.31.0
+pkgrel=1
 pkgdesc="A compute wrapper for Quantum Chemistry. (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
-url='https://github.com/MolSSI/QCEngine'
+url='https://molssi.github.io/QCEngine/'
+msys2_repository_url='https://github.com/MolSSI/QCEngine'
 msys2_references=(
   'aur: python-qcengine'
   'pypi: qcengine'
@@ -25,7 +26,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('ba62d34dbcf487e8368f6c19762a19e1c5f06af7e705f6c583c0632b35bccf7d')
+sha256sums=('51775d98239b0b51f81904f57946445970f05a0d9d139c5a89b56af9300c1e4f')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
