python-qcelemental: update to 0.29.0

--- a/mingw-w64-python-qcelemental/PKGBUILD
+++ b/mingw-w64-python-qcelemental/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=qcelemental
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.28.0
-pkgrel=3
+pkgver=0.29.0
+pkgrel=1
 pkgdesc="Core data structures for Quantum Chemistry. (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
-url='https://github.com/MolSSI/QCElemental'
+url='https://molssi.github.io/QCElemental/'
+msys2_repository_url='https://github.com/MolSSI/QCElemental'
 msys2_references=(
   'aur: python-qcelemental'
   'pypi: qcelemental'
@@ -16,6 +17,7 @@ msys2_references=(
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-numpy"
+         "${MINGW_PACKAGE_PREFIX}-python-packaging"
          "${MINGW_PACKAGE_PREFIX}-python-pint"
          "${MINGW_PACKAGE_PREFIX}-python-pydantic")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
@@ -23,7 +25,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-poetry-core")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('da96fddb88c1701f812b25369a6a169d35f2d5446c37c62e86048cb0f1b168a2')
+sha256sums=('bf634ee652e7d95e906e291989513224233b1d705c26afeac86e451f316b3c04')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
