--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=zed
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.170.1
+pkgver=0.170.2
 pkgrel=1
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
@@ -43,14 +43,12 @@ source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.13+zstd.1.5.6/download"
         "zed-dont-vendor-cargo-about.patch"
         "zed-set-rustflags.patch"
-        "zstd-sys-remove-statik.patch"
-        "22876.patch")
-sha256sums=('64dea9a05f608bff06f3648b3e86c8666bcf04a488f039060fa58cec9693b918'
+        "zstd-sys-remove-statik.patch")
+sha256sums=('02f742a11e7361dc64f63a51e21a3c72b72a0e748cd7fb41a73b3e15e75108e1'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
             'b126b7a9e3cc8d3d68c49dbfc184d54691b10172dbfd3272d4c2f43424cfca5b'
             '9a566344d0dddeffffda7d57c0798592193f24744997927c28207968a16ff101'
-            '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b'
-            '4e9e95ae76de5b9ed0405a56d36bb1b7cc8f7be61ebe6e033aaaf09c2ef4e973')
+            '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
 
 prepare() {
   cd "${_realname}"
@@ -58,7 +56,7 @@ prepare() {
   rm rust-toolchain.toml
 
   # https://github.com/zed-industries/zed/pull/22876
-  patch -Np1 -i "../22876.patch"
+  git cherry-pick -n d1be419fff415329b38f26aff90488700702c82a
   # use system cargo about to generate license file
   patch -Np1 -i "../zed-dont-vendor-cargo-about.patch"
   # apply `-Cforce-frame-pointers=yes` in .cargo/config.toml instead of env var to apply other
