gtk3: Update to 3.24.48

--- a/mingw-w64-gtk3/PKGBUILD
+++ b/mingw-w64-gtk3/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=gtk3
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}" "${MINGW_PACKAGE_PREFIX}-gtk-update-icon-cache")
-pkgver=3.24.43
+pkgver=3.24.48
 pkgrel=1
 pkgdesc="GObject-based multi-platform GUI toolkit (v3) (mingw-w64)"
 arch=('any')
@@ -33,14 +33,14 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-libepoxy"
          "${MINGW_PACKAGE_PREFIX}-pango"
          "${MINGW_PACKAGE_PREFIX}-shared-mime-info")
-source=("https://download.gnome.org/sources/gtk+/${pkgver%.*}/gtk+-${pkgver}.tar.xz"
+source=("https://download.gnome.org/sources/gtk/${pkgver%.*}/gtk-${pkgver}.tar.xz"
         "0003-gtkwindow-Don-t-force-enable-CSD-under-Windows.patch"
         "0004-Disable-low-level-keyboard-hook.patch"
         "0005-meson-fix-linker-flags-pkgconfig.patch"
         "gtk-query-immodules-3.0.hook.in"
         "gtk-update-icon-cache.hook.in"
         "gtk-update-icon-cache.script.in")
-sha256sums=('7e04f0648515034b806b74ae5d774d87cffb1a2a96c468cb5be476d51bf2f3c7'
+sha256sums=('d10ce9ea9df44c1016d8d1721f39e55d3d607fcfb85334aec0d236cdc9a70556'
             'b84a7f38f0af80680bee143d431f2a7bae53899efb337de0f67a1b4d9b59fa02'
             'e553083298495f9581ae1454b1046a22b83e81862311b30de984057eec859708'
             'f006498eaf5e93a927f1ee966512f7f059e66d3f47433eedab5c0f08692bdfac'
@@ -58,7 +58,7 @@ apply_patch_with_msg() {
 }
 
 prepare() {
-  cd "${srcdir}/gtk+-${pkgver}"
+  cd "${srcdir}/gtk-${pkgver}"
 
   # https://gitlab.gnome.org/GNOME/gtk/issues/760
   apply_patch_with_msg \
@@ -97,7 +97,7 @@ build() {
     --auto-features=enabled \
     "${_extra_config[@]}" \
     -Dbroadway_backend=true \
-    "../gtk+-${pkgver}"
+    "../gtk-${pkgver}"
 
   ${MINGW_PREFIX}/bin/meson compile
 }
@@ -125,7 +125,7 @@ package_gtk3() {
     mv "${pkgdir}"${MINGW_PREFIX}/share/man/man1/gtk-update-icon-cache.1 "$srcdir"
   fi
 
-  install -Dm644 "${srcdir}/gtk+-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
+  install -Dm644 "${srcdir}/gtk-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 }
 
 package_gtk-update-icon-cache() {
