--- a/mingw-w64-gnatdoc/PKGBUILD
+++ b/mingw-w64-gnatdoc/PKGBUILD
@@ -4,7 +4,7 @@ _realname=gnatdoc
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
 pkgver=25.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="GNAT documentation generation tool (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
@@ -52,13 +52,15 @@ package() {
     --prefix="${pkgdir}${MINGW_PREFIX}" \
     -XBUILD_MODE=prod \
     -XLIBRARY_TYPE=relocatable \
-    --build-var=LIBRARY_TYPE
+    --build-var=LIBRARY_TYPE \
+    --build-name=relocatable
 
   gprinstall -f -p -P gnat/gnatdoc.gpr \
     --prefix="${pkgdir}${MINGW_PREFIX}" \
     -XBUILD_MODE=prod \
     -XLIBRARY_TYPE=relocatable \
-    --build-var=LIBRARY_TYPE
+    --build-var=LIBRARY_TYPE \
+    --build-name=relocatable
 
   install -Dm644 -t "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}" \
     "${srcdir}/${_realname}-${pkgver}"/LICENSE*
