python-flask-migrate: update to 4.1.0

--- a/mingw-w64-python-flask-migrate/PKGBUILD
+++ b/mingw-w64-python-flask-migrate/PKGBUILD
@@ -1,12 +1,12 @@
 # Maintainer: Konstantin Podsvirov <konstantin@podsvirov.pro>
 
-_pyname=Flask-Migrate
-_realname=${_pyname,,}
+_pyname=flask_migrate
+_realname=${_pyname/_/-}
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-python-${_realname}-docs")
-pkgver=4.0.7
-pkgrel=2
+pkgver=4.1.0
+pkgrel=1
 pkgdesc='SQLAlchemy database migrations for Flask applications using Alembic (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -26,7 +26,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-sphinx"
              "${MINGW_PACKAGE_PREFIX}-python-sphinx-alabaster-theme")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('dff7dd25113c210b069af280ea713b883f3840c1e3455274745d7355778c8622')
+sha256sums=('1a336b06eb2c3ace005f5f2ded8641d534c18798d64061f6ff11f79e1434126d')
 
 prepare() {
   rm -rf "python-build-${MSYSTEM}" | true
