emscripten: update to 4.0.1

--- a/mingw-w64-emscripten/PKGBUILD
+++ b/mingw-w64-emscripten/PKGBUILD
@@ -6,10 +6,10 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 # Sadly, upstream currently suggests bundling a binaryen version for the time being:
 # https://github.com/emscripten-core/emscripten/issues/12252
 # I'm obviously unhappy about that but it appears to be the only practical solution for the time being.
-pkgver=3.1.74
+pkgver=4.0.1
 # NOTE: You need to run ./get-compatible-versions.sh after changing the pkgver!
-_binaryen_revision=52bc45fc34ec6868400216074744147e9d922685
-_llvm_project_revision=322eb1a92e6d4266184060346616fa0dbe39e731
+_binaryen_revision=e4bfcd2a06db0640bfbf1654f575239ecab72443
+_llvm_project_revision=a32e36faf84bd7da3df0c7d50bb9020568128417
 pkgrel=1
 pkgdesc="Compile C and C++ into highly-optimizable JavaScript for the web (mingw-w64)"
 arch=('any')
@@ -35,9 +35,9 @@ install="emscripten-${MSYSTEM}.install"
 source=("git+$msys2_repository_url#tag=$pkgver"
         "llvm-project-$_llvm_project_revision.tar.gz::https://github.com/llvm/llvm-project/archive/$_llvm_project_revision.tar.gz"
         "binaryen-$_binaryen_revision.tar.gz::https://github.com/WebAssembly/binaryen/archive/$_binaryen_revision.tar.gz")
-sha256sums=('a2a13b0a1e871c05cb296435b199e799341e5af4d4cf788e9add8822278c9d15'
-            '528b7a7324343a3241ec211c5fb2c3c0fa56208107969f7deb4e9462bccd25a4'
-            'a1ade0b4203a4b96df18cad55a724e006603977ad11bcb84cfd79b2f2d92c76c')
+sha256sums=('f74b4829fdb9f4a47579656c2ecba9a7638fd990b932ee9fbd430f07f7e313a8'
+            'ef59e10e9df3aa5eb4152871c170be719469e691951c52b310cd0185b7fbde7b'
+            'ca7bac829b4f5ef26af12f6a9da2a1baacf1d1b9eea67d8dbec0122a7ff73b72')
 noextract=("llvm-project-$_llvm_project_revision.tar.gz")
 
 prepare() {
@@ -128,5 +128,5 @@ package() {
   echo "export PATH=\$PATH:${MINGW_PREFIX}/lib/emscripten" > "${pkgdir}${MINGW_PREFIX}"/etc/profile.d/emscripten.sh
   cp "${pkgdir}${MINGW_PREFIX}"/etc/profile.d/emscripten.{sh,zsh}
 
-  install -Dm644 LICENSE "$pkgdir"${MINGW_PREFIX}/share/licenses/${_relaname}/LICENSE
+  install -Dm644 LICENSE "$pkgdir"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
