--- a/mingw-w64-crystal/PKGBUILD
+++ b/mingw-w64-crystal/PKGBUILD
@@ -10,8 +10,8 @@ _version="${_major}.${_minor}.${_patch}"
 _tag=${_version}
 pkgver=${_version}
 pkgrel=1
-pkgdesc="Fast and statically typed, compiled language with Ruby-like syntax"
-arch=('x86_64')
+pkgdesc="Fast and statically typed, compiled language with Ruby-like syntax (mingw-w64)"
+arch=('any')
 mingw_arch=('ucrt64' 'mingw64' 'clang64')
 url="https://crystal-lang.org/"
 msys2_repository_url="https://github.com/crystal-lang/crystal"
