libluv: update to 1.50.0_0

--- a/mingw-w64-libluv/PKGBUILD
+++ b/mingw-w64-libluv/PKGBUILD
@@ -4,7 +4,7 @@ _realname=luv
 _pkgname=lib${_realname}
 pkgbase=mingw-w64-${_pkgname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_pkgname}"
-_pkgver=1.48.0-2
+_pkgver=1.50.0-0
 pkgver=${_pkgver/-/_}
 pkgrel=1
 pkgdesc='Bare libuv bindings for lua (mingw-w64)'
@@ -17,12 +17,8 @@ depends=("${MINGW_PACKAGE_PREFIX}-luajit"
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("https://github.com/luvit/luv/releases/download/${_pkgver}/luv-${_pkgver}.tar.gz")
-sha256sums=('2c3a1ddfebb4f6550293a40ee789f7122e97647eede51511f57203de48c03b7a')
-
-prepare() {
-  cd "${srcdir}/${_realname}-${_pkgver}"
-}
+source=("https://github.com/luvit/luv/releases/download/v${_pkgver}/luv-v${_pkgver}.tar.gz")
+sha256sums=('27454564c5aa5951993578ec408ab823f1d17d122d17eac06449b35b286a5018')
 
 build() {
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
@@ -36,7 +32,7 @@ build() {
     -DBUILD_MODULE=OFF \
     -DWITH_SHARED_LIBUV=ON \
     -DLUA_BUILD_TYPE=System \
-    ../${_realname}-${_pkgver}
+    ../${_realname}-v${_pkgver}
 
   ${MINGW_PREFIX}/bin/cmake --build ./
 }
@@ -46,5 +42,5 @@ package() {
 
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install ./
 
-  install -Dm644 "${srcdir}/${_realname}-${_pkgver}/LICENSE.txt" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_pkgname}/LICENSE.txt"
+  install -Dm644 "${srcdir}/${_realname}-v${_pkgver}/LICENSE.txt" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_pkgname}/LICENSE.txt"
 }
