python-attrs: update to 25.1.0

--- a/mingw-w64-python-attrs/PKGBUILD
+++ b/mingw-w64-python-attrs/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=attrs
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=24.3.0
+pkgver=25.1.0
 pkgrel=1
 pkgdesc='Attributes without boilerplate (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url='https://attrs.readthedocs.org/'
+url='https://www.attrs.org/'
+msys2_repository_url='https://github.com/python-attrs/attrs'
 msys2_references=(
   'pypi: attrs'
 )
@@ -20,16 +21,10 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-hatch-vcs"
              "${MINGW_PACKAGE_PREFIX}-python-hatch-fancy-pypi-readme")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('8f5c07333d543103541ba7be0e2ce16eeee8130cb0b3f9238ab904ce1e85baff')
-
-prepare() {
-  cd "${srcdir}"
-  rm -rf python-build-${MSYSTEM}| true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+sha256sums=('1c97078a80c814273a76b2a298a932eb681c87415c11dee0a6921de7f1b02c3e')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
