--- a/mingw-w64-python-soundfile/PKGBUILD
+++ b/mingw-w64-python-soundfile/PKGBUILD
@@ -3,16 +3,17 @@
 _realname=soundfile
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.12.1
-pkgrel=4
+pkgver=0.13.1
+pkgrel=1
 pkgdesc='An audio library based on libsndfile, CFFI and NumPy (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="https://github.com/bastibe/SoundFile"
+url='https://python-soundfile.readthedocs.io/'
+msys2_repository_url='https://github.com/bastibe/python-soundfile'
 msys2_references=(
   'pypi: soundfile'
 )
-license=('BSD')
+license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-cffi"
          "${MINGW_PACKAGE_PREFIX}-python-numpy"
@@ -20,21 +21,16 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz"
         0001-fix-libsndfile-dll.patch)
-sha256sums=('e8e1017b2cf1dda767aef19d2fd9ee5ebe07e050d430f77a0a7c66ba08b8cdae'
+sha256sums=('b2c68dab1e30297317080a5b43df57e302584c49e2942defdde0acccc53f0e5b'
             'd8236f80c1c105f29ea55d160bfb4958311dfa24847f55133cbc00ab0f4320e7')
 
 prepare() {  
-  pushd "${_realname}-${pkgver}"
+  cd "${_realname}-${pkgver}"
   patch -p1 -i "${srcdir}/0001-fix-libsndfile-dll.patch"
-  popd
-
-  cd "$srcdir"
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
 }
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python setup.py build
 }
 
