--- a/mingw-w64-python-urllib3/PKGBUILD
+++ b/mingw-w64-python-urllib3/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=urllib3
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.26.20
-pkgrel=2
+pkgver=2.3.0
+pkgrel=1
 pkgdesc="HTTP library with thread-safe connection pooling and file post support (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -19,17 +19,15 @@ license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+             "${MINGW_PACKAGE_PREFIX}-python-hatchling"
+             "${MINGW_PACKAGE_PREFIX}-python-hatch-vcs")
 if [[ ${CARCH} != i686 ]]; then
 optdepends=("${MINGW_PACKAGE_PREFIX}-python-brotli: Brotli support"
-            "${MINGW_PACKAGE_PREFIX}-python-certifi: security support"
-            "${MINGW_PACKAGE_PREFIX}-python-cryptography: security support"
-            "${MINGW_PACKAGE_PREFIX}-python-idna: security support"
-            "${MINGW_PACKAGE_PREFIX}-python-pyopenssl: security support"
+            "${MINGW_PACKAGE_PREFIX}-python-zstandard: Zstandard support"
+            "${MINGW_PACKAGE_PREFIX}-python-h2: HTTP/2 support"
             "${MINGW_PACKAGE_PREFIX}-python-pysocks: SOCKS support")
 fi
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-brotli"
-              "${MINGW_PACKAGE_PREFIX}-python-certifi"
               "${MINGW_PACKAGE_PREFIX}-python-cryptography"
               "${MINGW_PACKAGE_PREFIX}-python-idna"
               "${MINGW_PACKAGE_PREFIX}-python-pyopenssl"
@@ -41,9 +39,11 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-python-brotli"
               "${MINGW_PACKAGE_PREFIX}-python-pytest"
               "${MINGW_PACKAGE_PREFIX}-python-pytest-timeout"
               "${MINGW_PACKAGE_PREFIX}-python-tornado"
+              "${MINGW_PACKAGE_PREFIX}-python-h2"
+              "${MINGW_PACKAGE_PREFIX}-python-zstandard"
               "${MINGW_PACKAGE_PREFIX}-python-trustme")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('40c2dc0c681e47eb8f90e7e27bf6ff7df2e677421fd46756da1161c39ca70d32')
+sha256sums=('f8c5449b3cf0861679ce7e0503c7b44b5ec981bec0d1d3795a07f1ba96f0204d')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
