--- a/mingw-w64-libspelling/PKGBUILD
+++ b/mingw-w64-libspelling/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=libspelling
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.4.5
-pkgrel=2
+pkgver=0.4.6
+pkgrel=1
 pkgdesc="A GNOME library for spellchecking (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -12,20 +12,23 @@ url='https://gnome.pages.gitlab.gnome.org/libspelling/libspelling-1/'
 msys2_repository_url="https://gitlab.gnome.org/GNOME/libspelling"
 license=("spdx:LGPL-2.1-or-later")
 depends=(
+  "${MINGW_PACKAGE_PREFIX}-enchant"
+  "${MINGW_PACKAGE_PREFIX}-glib2"
   "${MINGW_PACKAGE_PREFIX}-gtk4"
   "${MINGW_PACKAGE_PREFIX}-gtksourceview5"
   "${MINGW_PACKAGE_PREFIX}-icu"
-  "${MINGW_PACKAGE_PREFIX}-enchant"
-  )
+  "${MINGW_PACKAGE_PREFIX}-pango"
+)
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-cc"
   "${MINGW_PACKAGE_PREFIX}-gobject-introspection"
   "${MINGW_PACKAGE_PREFIX}-meson"
+  "${MINGW_PACKAGE_PREFIX}-ninja"
   "${MINGW_PACKAGE_PREFIX}-pkgconf"
   "${MINGW_PACKAGE_PREFIX}-vala"
   )
 source=("https://download.gnome.org/sources/${_realname}/${pkgver%.*}/${_realname}-${pkgver}.tar.xz")
-sha256sums=('ec0372d83f42b65aee3734248ef8e2ffbfba4ea91268419c98ea44a00ef3e83f')
+sha256sums=('3248a9b5336ea2f727d2db912d2f0083accc0505ce707679b3d9b8266c0101f5')
 
 build() {
   mkdir -p "${srcdir}"/build-${MSYSTEM} && cd "${srcdir}"/build-${MSYSTEM}
