python-deprecated: update to 1.2.18

--- a/mingw-w64-python-deprecated/PKGBUILD
+++ b/mingw-w64-python-deprecated/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=deprecated
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.2.17
+pkgver=1.2.18
 pkgrel=1
 pkgdesc="Python @deprecated decorator to deprecate old python classes, functions or methods (mingw-w64)"
 arch=('any')
@@ -20,7 +20,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('0114a10f0bbb750b90b2c2296c90cf7e9eaeb0abb5cf06c80de2c60138de0a82')
+sha256sums=('422b6f6d859da6f2ef57857761bfb392480502a64c3028ca9bbe86085d72115d')
 
 
 build() {
@@ -39,4 +39,7 @@ package() {
   MSYS2_ARG_CONV_EXCL="--prefix=" \
     ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
+
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE.rst" \
+    "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE.rst"
 }
