python-lz4: update to 4.4.3

--- a/mingw-w64-python-lz4/PKGBUILD
+++ b/mingw-w64-python-lz4/PKGBUILD
@@ -3,11 +3,8 @@
 _realname=lz4
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=4.3.3
-pkgrel=3
+pkgver=4.4.3
+pkgrel=1
 pkgdesc="This package provides python bindings for the LZ4 compression library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -28,20 +25,13 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest"
               "${MINGW_PACKAGE_PREFIX}-python-pytest-cov"
               "${MINGW_PACKAGE_PREFIX}-python-psutil")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('01fe674ef2889dbb9899d8a67361e0c4a2c833af5aeb37dd505727cf5d2a131e')
-
-prepare() {
-  cd "${srcdir}"
-
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-
-  # Set version for setuptools_scm
-  export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
-}
+sha256sums=('91ed5b71f9179bf3dbfe85d92b52d4b53de2e559aa4daa3b7de18e0dd24ad77d')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  # Set version for setuptools_scm
+  export SETUPTOOLS_SCM_PRETEND_VERSION="${pkgver}"
+
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
