python-milc: update to 1.9.1

--- a/mingw-w64-python-milc/PKGBUILD
+++ b/mingw-w64-python-milc/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=milc
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.9.0
-pkgrel=2
+pkgver=1.9.1
+pkgrel=1
 pkgdesc="Opinionated Batteries-Included Python 3 CLI Framework (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://milc.clueboard.co'
+msys2_repository_url='https://github.com/clueboard/milc'
 msys2_references=(
   'pypi: milc'
 )
@@ -17,14 +18,15 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-argcomplete"
          "${MINGW_PACKAGE_PREFIX}-python-colorama"
          "${MINGW_PACKAGE_PREFIX}-python-halo"
-         "${MINGW_PACKAGE_PREFIX}-python-platformdirs")
+         "${MINGW_PACKAGE_PREFIX}-python-platformdirs"
+         "${MINGW_PACKAGE_PREFIX}-python-spinners")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=(
   "https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz"
   "0001-temp-remove-types-colorama.patch")
-sha256sums=('c02ac9a23148a1fb4f339022e929a658ab2c8fe8c1cad10a9bb1226358cc71ce'
+sha256sums=('d89c9fa85984adca2e49b8f4a3a77bd649df6553c92583be38f55e9a9343a65e'
             'bd917622257c828f28dada2c241f40801961b761e3d06bcec2dedf9d7ddc0a9f')
 
 prepare() {
