--- a/mingw-w64-crystal/PKGBUILD
+++ b/mingw-w64-crystal/PKGBUILD
@@ -41,16 +41,21 @@ checkdepends=(
   "${MINGW_PACKAGE_PREFIX}-lld" # needed for linking std_spec
 )
 source=(
+  "$pkgname-$pkgver::git+${msys2_repository_url}.git#tag=${_version}"
   https://github.com/crystal-lang/crystal/releases/download/1.15.0/crystal-1.15.0-windows-x86_64-gnu-unsupported.zip # stage 0 compiler
 )
 sha256sums=(
+  '6be663c5f0c9410696ed3fb5bd6006cafc2ab0bd0813651b62ca65982360f512'
   '7d7df1b4a99cb3f938106ba45e0b55ce1d9913491999f1acaa57da168a18becb'
 )
 
 prepare() {
-  # workaround for lack of native symlink support in Git
-  git clone https://github.com/crystal-lang/crystal.git "$pkgname-$pkgver" -c core.symlinks=true || \
-    (cd "$pkgname-$pkgver" && MSYS='winsymlinks:nativestrict' git restore --source=HEAD :/)
+  cd "$pkgname-$pkgver"
+  if test true != "$(git config core.symlinks)"
+  then
+    git config core.symlinks true &&
+    MSYS='winsymlinks:nativestrict' git restore --source=HEAD :/
+  fi
 }
 
 build() {
