python-conan: allow newer urllib3

--- a/mingw-w64-python-conan/PKGBUILD
+++ b/mingw-w64-python-conan/PKGBUILD
@@ -4,7 +4,7 @@ _realname=conan
 pkgbase=mingw-w64-python-conan
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=2.11.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A distributed, open source, C/C++ package manager (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -33,11 +33,17 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 options=('!strip')
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('87f78a295716d1a37dfabc26f5d1b6a0ed49594618ea339420bb89627ececeda')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz"
+        "0001-urllib3-req.patch")
+sha256sums=('87f78a295716d1a37dfabc26f5d1b6a0ed49594618ea339420bb89627ececeda'
+            '49bf791b37381a97da5d380533636c7350a0bd9bf46c79b270cb64fa02e4cd8f')
 
 build() {
   cd "${srcdir}/${_realname}-${pkgver}"
+
+  # https://github.com/conan-io/conan/issues/13948
+  patch -Np1 -i "${srcdir}/0001-urllib3-req.patch"
+
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
