geographiclib: fix typo leading to missing static libs
* fix typo for BUILD_BOTH_LIBS to fix static lib
* while at it remove unused BUILD_STATIC_LIBS

Fixes #23217

--- a/mingw-w64-geographiclib/PKGBUILD
+++ b/mingw-w64-geographiclib/PKGBUILD
@@ -4,7 +4,7 @@ _realname=geographiclib
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=2.5
-pkgrel=1
+pkgrel=2
 pkgdesc="Set of C++ classes for conversions between geographic, UTM, UPS, MGRS, geocentric, and local cartesian coordinates, for gravity, geoid height, and geomagnetic field calculations and for solving geodesic problems (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -35,9 +35,9 @@ build() {
       -GNinja \
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       "${extra_config[@]}" \
-      -DBUILD_{SHARED,STATIC}_LIBS=ON \
+      -DBUILD_SHARED_LIBS=ON \
       -DBUILD_DOCUMENTATION=ON \
-      -DBUILD_BOTH_LIBS= ON \
+      -DBUILD_BOTH_LIBS=ON \
       -S "${_realname}-${pkgver}" \
       -B "build-${MSYSTEM}"
 
