ollama: Fix packaging on clangarm64

--- a/mingw-w64-ollama/PKGBUILD
+++ b/mingw-w64-ollama/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgdesc='Create, run and share large language models (LLMs) (mingw-w64)'
 pkgver=0.5.7
-pkgrel=1
+pkgrel=2
 arch=(any)
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_repository_url='https://github.com/ollama/ollama'
@@ -46,17 +46,17 @@ build() {
   [[ -d "${srcdir}"/build-${MSYSTEM} ]] && rm -rf "${srcdir}"/build-${MSYSTEM}
   cp -r "${_realname}-${pkgver}" "build-${MSYSTEM}" && cd "build-${MSYSTEM}"
 
-  export CGO_CFLAGS="$CFLAGS" CGO_CPPFLAGS="$CPPFLAGS" CGO_CXXFLAGS="$CXXFLAGS" CGO_LDFLAGS="$LDFLAGS"
-  export GOPROXY=direct
-  export GOROOT=${MINGW_PREFIX}/lib/go
-  export GOPATH=${MINGW_PREFIX}/
-
   if [[ ${CARCH} == aarch64 ]]; then
     # See https://github.com/ggerganov/llama.cpp/blob/325afb37/cmake/arm64-windows-llvm.cmake#L12
     local _flags="-march=armv8.7-a -fvectorize -ffp-model=fast -fno-finite-math-only"
     CFLAGS+=" ${_flags}"
     CXXFLAGS+=" ${_flags}"
   fi
+
+  export CGO_CFLAGS="$CFLAGS" CGO_CPPFLAGS="$CPPFLAGS" CGO_CXXFLAGS="$CXXFLAGS" CGO_LDFLAGS="$LDFLAGS"
+  export GOPROXY=direct
+  export GOROOT=${MINGW_PREFIX}/lib/go
+  export GOPATH=${MINGW_PREFIX}/
 
   make \
     OLLAMA_SKIP_CUDA_GENERATE=yes \
@@ -77,10 +77,11 @@ package() {
   mkdir -p "${pkgdir}${MINGW_PREFIX}/bin"
   install ollama.exe -t"${pkgdir}${MINGW_PREFIX}/bin"
 
-  local dist_arch=$([[ ${CARCH} == aarch64 ]] && echo "arm64" || echo "amd64")
-  mkdir -p "${pkgdir}"${MINGW_PREFIX}/lib/ollama/runners
-  cp -r llama/build/windows-${dist_arch}/runners/cpu* \
-    "${pkgdir}"${MINGW_PREFIX}/lib/ollama/runners/
+  if [[ ${CARCH} == x86_64 ]]; then
+    mkdir -p "${pkgdir}"${MINGW_PREFIX}/lib/ollama/runners
+    cp -r llama/build/windows-amd64/runners/cpu* \
+      "${pkgdir}"${MINGW_PREFIX}/lib/ollama/runners/
+  fi
 
   install -Dm644 LICENSE "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
